virtualbox-ose (2.0.6-dfsg-1) experimental; urgency=low

  * New upstream version. Closes: #497840  
  * Do not warn user about losing snapshots anymore, this is supposed to be a
    thing of the past. Closes: #500101
  * Made guest utils init script more verbose if module was not loadable.
    Closes: #505586

 -- Michael Meskes <meskes@debian.org>  Thu, 20 Nov 2008 14:09:54 +0100

virtualbox-ose (1.6.6-dfsg-3) unstable; urgency=high

  * Added upstream patch to support kernel 2.6.27, closes: #502068
  * Added upstream patch to prevent potential symlink attack, closes: #504149

 -- Michael Meskes <meskes@debian.org>  Mon, 13 Oct 2008 16:38:47 +0200

virtualbox-ose (1.6.6-dfsg-2) unstable; urgency=low

  * Added NOTPARALLEL option in guest sources Makefile, that somehow got lost,
    closes: #494475
  * Stop spamming log files by using patch provided by Stefan Lippers-Hollmann
    <s.L-H@gmx.de>, closes: #500484

 -- Michael Meskes <meskes@debian.org>  Fri, 03 Oct 2008 17:17:10 +0200

virtualbox-ose (1.6.6-dfsg-1) unstable; urgency=low

  [ Michael Meskes ]
  * New upstream version
    - no longer able to select disk in use for new VM, closes: #495028
  * Removed patch 05-vboxadd-udev which was applied upstream.
  * Removed absolute paths in maintainer scripts.
  * Override lintian error in RDP subdir because the client is not build anyway.
 
  [ Patrick Winnertz ]
  * New upstream version fixes compilation error of -modules with kernelversion
    2.6.27 (Closes: #499623)

 -- Patrick Winnertz <winnie@debian.org>  Sun, 21 Sep 2008 22:29:58 +0200

virtualbox-ose (1.6.2-dfsg-6) unstable; urgency=medium

  * Apply changesets 12299, 12303, 12305, 12307 and 12308 from upstream SVN
    to fix errors running 2.6.26-686 kernels in a Virtual Machine. Patch
    created by Frans Pop <fjp@debian.org>. Closes: #497505.

 -- Michael Meskes <meskes@debian.org>  Mon, 15 Sep 2008 10:01:21 +0200

virtualbox-ose (1.6.2-dfsg-5) unstable; urgency=low

  [ Michael Meskes ]