@@ -5,6 +5,7 @@ virtualbox-ose (2.0.6-dfsg-1) experimental; urgency=low
     thing of the past. Closes: #500101
   * Made guest utils init script more verbose if module was not loadable.
     Closes: #505586
+  * Documented need for hardware virtualization if running a 64-bit guest.
 
  -- Michael Meskes <meskes@debian.org>  Thu, 20 Nov 2008 14:09:54 +0100
 
